# movie-api-arc42

./: .dockerignore  .gitignore  Dockerfile  README.md  movies.db  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/: decorators.py  schemas.py
app/api/routes/: actors.py  movies.py  ratings.py
app/business/: services.py
app/database/: connection.py  models.py
app/persistence/: repositories.py
arc42/src/: arc42-template-EN.tex  architecture_diagram.puml  movie-api-architecture.tex
scripts/: populate_data.py
